--- a/login.html
+++ b/login.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProcessoFit</title>
+    <title>ProgressoFit</title>
     <link rel="stylesheet" href="./styles/main.css">
-    <link href="./styles/login/signin.css" rel="stylesheet">
+    <link href="styles/login/login.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <p class="mt-5 mb-3 text-muted">&copy; <span id="year-tag"></span></p>
+        <p class="mt-5 mb-3 text-muted" id="footer"></p>
     </form>
 </main>
 
